--- a/02_UIL/client/src/app/app.component.html
+++ b/02_UIL/client/src/app/app.component.html
@@ -1,19 +1,3 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Angular Front End! (Bootstrap Working)</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <button type="button" class="btn btn-primary">Primary</button>
-      <button type="button" class="btn btn-secondary">Secondary</button>
-      <button type="button" class="btn btn-success">Success</button>
-      <button type="button" class="btn btn-danger">Danger</button>
-      <button type="button" class="btn btn-warning">Warning</button>
-      <button type="button" class="btn btn-info">Info</button>
-      <button type="button" class="btn btn-light">Light</button>
-      <button type="button" class="btn btn-dark">Dark</button>
-    </div>
-  </div>
+    <app-signup></app-signup>
 </div>
