add order form and route

--- a/02_UIL/client/src/app/header/navbar/navbar.component.html
+++ b/02_UIL/client/src/app/header/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                     <a class="nav-item nav-link" routerLink="/signup">Sign Up</a>
                 </li>
                 <li routerLinkActive="active">
-                    <a class="nav-item nav-link" routerLink="/ordernow">Order Now</a>
+                    <a class="nav-item nav-link" routerLink="/order">Order Now</a>
                 </li>
             </ul>
         </div>
