--- a/02_UIL/client/src/app/order/cart/cart.component.html
+++ b/02_UIL/client/src/app/order/cart/cart.component.html
@@ -1,9 +1,9 @@
 <div class="card">
   <div class="card-body">
     <button
-      type="submit"
-      form="orderForm"
+      (click)="onSubmitOrder()"
       class="btn btn-primary rounded-0 btn-block"
+      [disabled]="shoppingCart.length == 0"
     >
       Submit
     </button>
