--- a/02_UIL/client/src/app/order/cart/cart.component.html
+++ b/02_UIL/client/src/app/order/cart/cart.component.html
@@ -22,3 +22,7 @@
     </ul>
   </div>
 </div>
+
+<div class="alert alert-success" role="alert" *ngIf="orderCompleted">
+  Order successfully placed!
+</div>
