add loading spinner for UX

--- a/02_UIL/client/src/app/login/login.component.html
+++ b/02_UIL/client/src/app/login/login.component.html
@@ -27,3 +27,6 @@
         <p class="mt-3 font-weight-normal">Don't you have an account? <a routerLink="/signup"><strong>Sign Up Now</strong></a></p>
     </div>
 </form>
+
+<!-- UX: Display loading spinner for 500ms before redirecting ------- keep? -->
+<app-loading-spinner *ngIf="isLoading" class="d-flex justify-content-center"></app-loading-spinner>
