--- a/02_UIL/client/src/app/order/cart/cart.component.html
+++ b/02_UIL/client/src/app/order/cart/cart.component.html
@@ -17,14 +17,19 @@
     <ul *ngFor="let item of shoppingCart; let i = index" class="list-group">
       <div class="list-group-item">
         <a>{{ item.name }} - ₪{{ item.price }}</a>
-        <small class="pull-right remove-btn" (click)="onRemoveItem(i)">Remove</small>
+        <small class="pull-right remove-btn" (click)="onRemoveItem(i)"
+          >Remove</small
+        >
       </div>
     </ul>
   </div>
 </div>
 
 <!-- UX: Display loading spinner for 500ms before success alert ------- keep? -->
-<app-loading-spinner *ngIf="isLoading" class="d-flex justify-content-center"></app-loading-spinner>
+<app-loading-spinner
+  *ngIf="isLoading"
+  class="d-flex justify-content-center"
+></app-loading-spinner>
 <div class="alert alert-success" role="alert" *ngIf="orderCompleted">
   Order successfully placed!
 </div>
