--- a/02_UIL/client/src/app/order/menu-item/menu-item.component.html
+++ b/02_UIL/client/src/app/order/menu-item/menu-item.component.html
@@ -2,14 +2,12 @@
   <h5 class="card-header text-center">{{ item.name }}</h5>
   <div class="row card-body">
     <div class="col-md-7">
-      <p >{{ item.description }}</p>
+      <p>{{ item.description }}</p>
       <label>₪{{ item.price }}.00</label>
     </div>
 
-      <img [src]="item.imagePath" class="img-responsive">
-
+    <img [src]="item.imagePath" class="img-responsive" />
   </div>
-  
 </div>
 
 <!-- <div class="card" style="width: 18rem;">
