--- a/02_UIL/client/src/app/header/header.component.html
+++ b/02_UIL/client/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <div>
-    <p>
-        <app-navbar></app-navbar>
-    </p>
-</div>
+    <app-navbar></app-navbar>
+    <div class="back_header">
+        <h1 class="text-center display-3 p-5">
+            <i><strong>{{title}}</strong></i>
+        </h1>
+        <img src="https://visuels.l214.com/sites/blog.l214.com/2017/fevrier/banniere-ANSES-1.jpg">
+    </div>
