--- a/02_UIL/client/src/app/login/login.component.html
+++ b/02_UIL/client/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="card text-center mb-3 form-group bg-light shadow">
+<form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="card text-center mb-3 form-group bg-light shadow" @fade>
     <!-- Form Title -->
     <div class="card-header">
         <h1 class="font-weight-light text-uppercase"><b>LOGIN TO BONAPP'</b></h1>
