--- a/02_UIL/client/src/app/home/home.component.html
+++ b/02_UIL/client/src/app/home/home.component.html
@@ -1,58 +1,28 @@
-<h1 class="text-center">(BonApp logo here)</h1>
+<!-- <h1 class="text-center">(BonApp logo here)</h1> -->
 
-<div
-  id="carouselExampleIndicators"
-  class="carousel slide w-75 mx-auto"
-  data-ride="carousel"
->
-  <ol class="carousel-indicators">
-    <li
-      data-target="#carouselExampleIndicators"
-      data-slide-to="0"
-      class="active"
-    ></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img
-        class="d-block w-100"
-        src="https://cdn.pixabay.com/photo/2017/12/05/20/09/pizza-3000274_1280.jpg"
-        alt="First slide"
-      />
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" @fade>
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://parryspizza.com/wp-content/uploads/Uncle-Sam-1200x400-1-1200x400.jpg" alt="First slide" />
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.davita.com/-/media/davita/project/kidneycare/recipe-images/new/b/burgerbrewery_3_1.ashx?mw=1200&mh=400&hash=7711d35d88efa3936f775ce7fde1457fc8dea5c3" alt="Second slide" />
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://gray-ksfy-prod.cdn.arcpublishing.com/resizer/w_6951AeJD6vMne19FsqliXxqz4=/1200x400/smart/cloudfront-us-east-1.images.arcpublishing.com/gray/VWXFC24IQJBKBL523ULBYJHKUM.jpg" alt="Third slide" />
+        </div>
     </div>
-    <div class="carousel-item">
-      <img
-        class="d-block w-100"
-        src="https://media-cdn.tripadvisor.com/media/photo-s/17/ba/a6/31/burger.jpg"
-        alt="Second slide"
-      />
-    </div>
-    <div class="carousel-item">
-      <img
-        class="d-block w-100"
-        src="https://cdn.pixabay.com/photo/2017/03/07/20/08/pasta-2125107_1280.jpg"
-        alt="Third slide"
-      />
-    </div>
-  </div>
-  <a
-    class="carousel-control-prev"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="prev"
-  >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a
-    class="carousel-control-next"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="next"
-  >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
