--- a/02_UIL/client/src/app/order-history/history-item/history-item.component.html
+++ b/02_UIL/client/src/app/order-history/history-item/history-item.component.html
@@ -1,13 +1,27 @@
-<div class="card mx-2 mb-2" (click)="onReorder()">
-  <h5 class="card-header text-center">{{ order.date }} | {{ order.time }}</h5>
+<div
+  class="card mx-4 mb-5"
+  placement="bottom"
+  ngbTooltip="Total: {{ order.totalPrice }}₪"
+>
+  <!-- Card Header -->
+  <div class="card-header d-flex justify-content-between">
+    <h5><span class="badge badge-secondary">#</span></h5>
+    <h5>
+      <span class="badge badge-light">{{ orderTime }}</span>
+    </h5>
+  </div>
+  <!-- Card Body -->
   <div class="row card-body">
     <div class="list-group">
       <div class="list-group-item mx-2" *ngFor="let item of order.items">
-        <small >{{ item.name }}</small>
+        <small>{{ item.quantity }} <small>x</small> {{ item.name }}</small>
       </div>
     </div>
   </div>
-  <div class="card-footer text-center">
-    <h3>Total: {{order.totalPrice}}₪</h3>
+  <!-- Card Footer -->
+  <div class="card-footer d-flex justify-content-center">
+    <button class="btn btn-sm btn-primary" (click)="onReorder()">
+      Reorder
+    </button>
   </div>
 </div>
