--- a/02_UIL/client/src/app/order/cart/cart.component.css
+++ b/02_UIL/client/src/app/order/cart/cart.component.css
@@ -1,6 +1,12 @@
 .remove-btn {
   cursor: pointer;
   color: blue;
+  font-size: 14px;
+}
+
+.itemText {
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .alert-success {
@@ -9,5 +15,38 @@
 
 .cart {
   position: fixed;
-  width: 20%;
+  width: 30%;
+}
+
+.btn-sm {
+  height: 30px;
+  width: 30px;
+  border:none;
+  border-top: 1px solid #6c737d;
+  border-bottom: 1px solid #6c737d;
+  /* font-size: 10px; */
+}
+.btn:focus,
+.btn:active{
+    box-shadow:none !important;
+    outline:0px !important;
+}
+
+.quantityText {
+  border-radius: 0;
+  border-top: 1px solid #6c737d;
+  border-bottom: 1px solid #6c737d;
+}
+
+.minusBtn, .plusBtn {
+  font-weight: bolder;
+  background-color: 6c737d;
+}
+
+.minusBtn {
+  border-left: 1px solid #6c737d;
+}
+
+.plusBtn {
+  border-right: 1px solid #6c737d;
 }
