--- a/02_UIL/client/src/app/header/navbar/navbar.component.css
+++ b/02_UIL/client/src/app/header/navbar/navbar.component.css
@@ -1,24 +1,23 @@
 .navbar-text {
-    color: white;
+  color: white;
 }
 
 .navbar-right {
-    color: white;
-    margin-left: 2%;
-    cursor: pointer;
+  color: white;
+  margin-left: 2%;
+  cursor: pointer;
 }
 
 .navbar {
-    z-index: 2;
-    opacity: 0.8;
+  /* z-index: 2; */
+  opacity: 0.9;
 }
-
 
 /*code to change background color*/
 
-.navbar-nav>.active>a.admin_options {
-    background-image: linear-gradient(#b60000, #4b0000);
-    color: white;
-    opacity: 0.8;
-    border-radius: 5px;
+.navbar-nav > .active > a.admin_options {
+  background-image: linear-gradient(#b60000, #4b0000);
+  color: white;
+  opacity: 0.8;
+  border-radius: 5px;
 }
