--- a/02_UIL/client/src/app/header/navbar/navbar.component.html
+++ b/02_UIL/client/src/app/header/navbar/navbar.component.html
@@ -25,27 +25,32 @@
                     <a class="nav-item nav-link admin_options" routerLink="/activities">Active Orders</a
           >
         </li>
-        <li routerLinkActive="active" *ngIf="isAdmin">
-          <a class="nav-item nav-link admin_options" routerLink="/controladmin"
-          >Control Admin</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div *ngIf="isAuthenticated">
-    <app-notifications></app-notifications>
-  </div>
-
-  <div class="navbar-text">
-    <span *ngIf="userName">Welcome Back, {{ userName }}!</span>
-    <span *ngIf="!userName">Hello, guest!</span>
-  </div>
-
-  <ul class="nav navbar-nav navbar-right">
-    <li *ngIf="isAuthenticated">
-      <a (click)="onLogout()">Logout</a>
+    <!-- routerLink="/controladmin" -->
+    <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdmin">
+        <a class="nav-link dropdown-toggle admin_options" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Control Admin
+      </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item">Menu Manager</a>
+                        <a class="dropdown-item">Users Manager</a>
+                    </div>
                 </li>
             </ul>
+        </div>
+    </div>
+
+    <div *ngIf="isAuthenticated">
+        <app-notifications></app-notifications>
+    </div>
+
+    <div class="navbar-text">
+        <span *ngIf="userName">Welcome Back, {{ userName }}!</span>
+        <span *ngIf="!userName">Hello, guest!</span>
+    </div>
+
+    <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="isAuthenticated">
+            <a (click)="onLogout()">Logout</a>
+        </li>
+    </ul>
 </nav>
