--- a/02_UIL/client/src/app/order-history/history-item/history-item.component.html
+++ b/02_UIL/client/src/app/order-history/history-item/history-item.component.html
@@ -13,7 +13,7 @@
   <!-- Card Body -->
   <div class="row card-body">
     <div class="list-group">
-      <div class="list-group-item mx-2" *ngFor="let item of order.items">
+      <div class="list-group-item mx-2 mb-1 history-item" *ngFor="let item of order.items">
         <small>{{ item.quantity }} <small>x</small> {{ item.name }}</small>
       </div>
     </div>
