--- a/02_UIL/client/src/app/order/cart/cart.component.html
+++ b/02_UIL/client/src/app/order/cart/cart.component.html
@@ -12,48 +12,52 @@
 
       <hr />
 
-      <p *ngIf="shoppingCart.length == 0" class="text-center">Your cart is empty</p>
+      <p *ngIf="shoppingCart.length == 0" class="text-center">
+        Your cart is empty
+      </p>
       <!-- Cart items -->
-      <ul *ngFor="let item of shoppingCart; let i = index" class="list-group">
-        <div
-          class="list-group-item d-flex justify-content-between align-items-center"
-        >
-          <div class="btn-group" role="group">
-            <!-- Minus(-) Button -->
-            <button
-              type="button"
-              class="btn btn-sm minusBtn"
-              (click)="onChangeQuantity('-', i)"
-            >
-              –
-            </button>
-            <!-- Item Quantity -->
-            <strong class="btn-sm quantityText text-center">{{
-              item.quantity
-            }}</strong>
-            <!-- Plus(+) Button -->
-            <button
-              type="button"
-              class="btn btn-sm plusBtn"
-              (click)="onChangeQuantity('+', i)"
-            >
-              +
-            </button>
+      <div class="cart-items">
+        <ul *ngFor="let item of shoppingCart; let i = index" class="list-group">
+          <div
+            class="list-group-item d-flex justify-content-between align-items-center"
+          >
+            <div class="btn-group" role="group">
+              <!-- Minus(-) Button -->
+              <button
+                type="button"
+                class="btn btn-sm minusBtn"
+                (click)="onChangeQuantity('-', i)"
+              >
+                –
+              </button>
+              <!-- Item Quantity -->
+              <strong class="btn-sm quantityText text-center">{{
+                item.quantity
+              }}</strong>
+              <!-- Plus(+) Button -->
+              <button
+                type="button"
+                class="btn btn-sm plusBtn"
+                (click)="onChangeQuantity('+', i)"
+              >
+                +
+              </button>
+            </div>
+            <!-- Item name -->
+            <a class="itemText">{{ item.name }}</a>
+            <div class="d-flex flex-column">
+              <!-- Item price -->
+              <a>₪{{ item.price * item.quantity }}</a>
+              <!-- Remove Button -->
+              <a
+                class="pull-right remove-btn text-center"
+                (click)="onRemoveItem(i)"
+                >Remove</a
+              >
+            </div>
           </div>
-          <!-- Item name -->
-          <a class="itemText">{{ item.name }}</a>
-          <div class="d-flex flex-column">
-            <!-- Item price -->
-            <a>₪{{ item.price * item.quantity }}</a>
-            <!-- Remove Button -->
-            <a
-              class="pull-right remove-btn text-center"
-              (click)="onRemoveItem(i)"
-              >Remove</a
-            >
-          </div>
-        </div>
-      </ul>
+        </ul>
+      </div>
     </div>
     <p *ngIf="shoppingCart.length > 0" class="text-center">
       Total price: ₪{{ totalPrice }}
