--- a/02_UIL/client/src/app/activities/activities.component.css
+++ b/02_UIL/client/src/app/activities/activities.component.css
@@ -1,7 +1,9 @@
 .anyClass {
     overflow-x: scroll;
+    margin: 0;
+    padding: 0;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    display: auto;
 }
