define ITEM sub-schema, change date&time format

--- a/02_UIL/client/src/app/header/header.component.css
+++ b/02_UIL/client/src/app/header/header.component.css
@@ -10,7 +10,7 @@
     z-index: 2;
     color: black;
     display: flex;
-    font-family: cursive;
+    font-family: cursive, Verdana, Tahoma, sans-serif;
     /* font-size: 5vw; */
 }
 
