added orderID field

--- a/02_UIL/client/src/app/order-history/history-item/history-item.component.html
+++ b/02_UIL/client/src/app/order-history/history-item/history-item.component.html
@@ -5,7 +5,7 @@
 >
   <!-- Card Header -->
   <div class="card-header d-flex justify-content-between">
-    <h5><span class="badge badge-secondary">#</span></h5>
+    <h5><span class="badge badge-secondary">#{{order.orderID}}</span></h5>
     <h5>
       <span class="badge badge-light">{{ orderTime }}</span>
     </h5>
