--- a/02_UIL/client/src/app/order/cart/cart.component.css
+++ b/02_UIL/client/src/app/order/cart/cart.component.css
@@ -1,4 +1,5 @@
-.remove-btn {
+.remove-btn,
+.clear-btn {
   cursor: pointer;
   color: blue;
   font-size: 14px;
@@ -26,15 +27,15 @@
 .btn-sm {
   height: 30px;
   width: 30px;
-  border:none;
+  border: none;
   border-top: 1px solid #6c737d;
   border-bottom: 1px solid #6c737d;
   /* font-size: 10px; */
 }
 .btn:focus,
-.btn:active{
-    box-shadow:none !important;
-    outline:0px !important;
+.btn:active {
+  box-shadow: none !important;
+  outline: 0px !important;
 }
 
 .quantityText {
@@ -43,7 +44,8 @@
   border-bottom: 1px solid #6c737d;
 }
 
-.minusBtn, .plusBtn {
+.minusBtn,
+.plusBtn {
   font-weight: bolder;
   background-color: 6c737d;
 }
@@ -54,4 +56,14 @@
 
 .plusBtn {
   border-right: 1px solid #6c737d;
+}
+
+.footer {
+  min-width: 33%;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.clear-btn {
+  text-align: center;
 }
