--- a/02_UIL/client/src/app/order/menu-item/menu-item.component.html
+++ b/02_UIL/client/src/app/order/menu-item/menu-item.component.html
@@ -1,12 +1,13 @@
 <div class="card">
   <h5 class="card-header text-center">{{ item.name }}</h5>
   <div class="row card-body">
-    <div class="col-md-7">
+    <div class="col-sm-6">
       <p>{{ item.description }}</p>
       <label>₪{{ item.price }}.00</label>
     </div>
-
-    <img [src]="item.imagePath" class="img-responsive" />
+    <div class="col-sm-6">
+      <img [src]="item.imagePath" class="img-responsive float-right" />
+    </div>
   </div>
 </div>
 
