--- a/02_UIL/client/src/app/order/order.component.css
+++ b/02_UIL/client/src/app/order/order.component.css
@@ -1,3 +1,11 @@
 .col-md-6 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.col-md-4 {
+  padding-left: 25px;
+}
+
+.img-responsive {
+    padding: 0;
 }
