--- a/02_UIL/client/src/app/controladmin/menumanager/menumanager.component.html
+++ b/02_UIL/client/src/app/controladmin/menumanager/menumanager.component.html
@@ -1,1 +1,8 @@
-<p>menumanager works!</p>
+<div class="row">
+    <div class="col-md-6" @fade *ngFor="let item of menu">
+        <app-menumanageritem [item]="item"></app-menumanageritem>
+    </div>
+    <div class="col-md-12 text-center">
+        <a class="btn-floating btn-lg plus-button" type="button" role="button" (click)="addItemMenu()"></a>
+    </div>
+</div>
