--- a/02_UIL/client/src/styles.css
+++ b/02_UIL/client/src/styles.css
@@ -1,23 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
+
 /* SCROLLBAR */
+
+
 /* width */
+
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 8px;
+    width: 5px;
+    height: 8px;
 }
+
 
 /* Track */
+
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+    background: transparent;
 }
+
 
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-  background: #888;
+    background: #888;
 }
 
+
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
